[gd_scene load_steps=2 format=3 uid="uid://c3hqj8p2gnvx5"]

[ext_resource type="Script" path="res://Scenes/LevelSelect/LevelSelect.gd" id="1_0f8mh"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0f8mh")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0588235, 0.247059, 0.341176, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = -550.0
offset_right = 624.0
offset_bottom = -500.0
text = "SELECT LEVEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0

[node name="EasyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Easy Level"

[node name="NormalButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Normal Level"

[node name="HardButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Hard Level"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -50.0
text = "Back"
